# MasPatas

./: .env.example  README.md  docker-compose.yml  pyproject.toml
frontend/: index.html  package.json
frontend/src/: App.jsx  api.js  styles.css
src/maspatas/application/dto/: client_dto.py  product_dto.py  sale_dto.py
src/maspatas/application/services/: authorization.py
src/maspatas/application/use_cases/: register_client.py  register_product.py  register_sale.py
src/maspatas/domain/entities/: client.py  inventory.py  product.py  sale.py
src/maspatas/domain/exceptions/: domain_exceptions.py
src/maspatas/domain/ports/: concurrency.py  repositories.py
src/maspatas/domain/value_objects/: common.py
src/maspatas/infrastructure/db/: bootstrap.py  models.py  mongo.py  session.py
src/maspatas/infrastructure/logging/: config.py
src/maspatas/infrastructure/repositories/: memory_repositories.py  mongo_repositories.py  sqlalchemy_repositories.py
src/maspatas/infrastructure/resilience/: concurrency.py  policy.py
src/maspatas/infrastructure/security/: auth.py
src/maspatas/interfaces/api/: main.py  schemas.py
tests/integration/: test_sales_endpoint.py
tests/unit/: test_register_client_use_case.py  test_register_product_use_case.py  test_register_sale_use_case.py
