[project]
name = "maspatas-inventario"
version = "0.1.0"
description = "Aplicación empresarial hexagonal para inventario y ventas"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg2-binary>=2.9.9",
  "pydantic>=2.8.0",
  "tenacity>=8.4.0",
  "pybreaker>=1.2.0",
  "structlog>=24.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
